[gd_scene load_steps=22 format=3 uid="uid://c2uaimfvdvwfe"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_quswb"]
[ext_resource type="Texture2D" uid="uid://br0r4e6naiykf" path="res://Sprites/characters/slime.png" id="2_56oj7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ylcol"]
atlas = ExtResource("2_56oj7")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioak5"]
atlas = ExtResource("2_56oj7")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lecba"]
atlas = ExtResource("2_56oj7")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_moky7"]
atlas = ExtResource("2_56oj7")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr553"]
atlas = ExtResource("2_56oj7")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifnek"]
atlas = ExtResource("2_56oj7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypnwg"]
atlas = ExtResource("2_56oj7")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p1d8"]
atlas = ExtResource("2_56oj7")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyyrj"]
atlas = ExtResource("2_56oj7")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxc7x"]
atlas = ExtResource("2_56oj7")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_by2rp"]
atlas = ExtResource("2_56oj7")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgqqn"]
atlas = ExtResource("2_56oj7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq71l"]
atlas = ExtResource("2_56oj7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27i1c"]
atlas = ExtResource("2_56oj7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bw6k"]
atlas = ExtResource("2_56oj7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hx6ym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylcol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioak5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lecba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moky7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr553")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifnek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypnwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p1d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyyrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by2rp")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgqqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq71l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27i1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bw6k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_av8ri"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_pauus"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2hrct"]
radius = 11.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_quswb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_hx6ym")
animation = &"idle"
offset = Vector2(0, -6.405)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_av8ri")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_pauus")

[node name="Hitbox" type="Area2D" parent="."]

[node name="EnemyHitbox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_2hrct")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.539

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
